--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,7 @@
     <string name="catego_label_2_2">Regular</string>
     <string name="catego_label_2_3">Severa</string>
     <string name="catego_label_3">Detalle de Crisis</string>
+    <string name="catego_result_insert_positive">Reporte agregado, Gracias!</string>
+    <string name="catego_result_insert_negative">Hubo un error en el reporte :(</string>
 
 </resources>
