Agregado funcionalidad de logout de los settings y dando una afinada a la seccion de las listas de terapeutas y admin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <!-- strings generales español -->
     <string name="app_name">Anxiety Monitor</string>
     <string name="action_settings">Settings</string>
+    <string name="patients_title">Listado Pacientes</string>
+    <string name="therapist_title">Listado Terapeutas</string>
 
     <!-- Labels del login en español -->
     <string name="user_username">Nombre de Usuario</string>
