--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,10 @@
     <string name="view_catego_dialog_title">Entrada Crisis</string>
     <string name="view_catego_dialog_cancelbutton">Cerrar</string>
 
+    //labels para modal categoria
+    <string name="view_dasa_dialog_title">Entrada Diario</string>
+    <string name="view_dasa_dialog_cancelbutton">Cerrar</string>
+
     //labels para borrar los datos
     <string name="logout_dialog_title">Logout</string>
     <string name="logout_dialog_message">Se borraran los datos del usuario y se cerrara la aplicación</string>
