Agregado clase de formato de fechas con soporte a multilenguaje y arreglado los formatos de fechas de los detalles (dasa y categorias) además de agregó la funcionalidad para registrar el uso del juego de respiracion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,21 @@
         <item>A black cat crossing your path signifies that the animal is going somewhere.</item>
         <item>Humor is reason gone mad.</item>
     </string-array>
+
+
+    <!--traduccones de el calendario utility class -->
+    <string-array name="month_names">
+        <item>Enero</item>
+        <item>Febrero</item>
+        <item>Marzo</item>
+        <item>Abril</item>
+        <item>Mayo</item>
+        <item>Junio</item>
+        <item>Julio</item>
+        <item>Agosto</item>
+        <item>Septiembre</item>
+        <item>Octubre</item>
+        <item>Noviembre</item>
+        <item>Diciembre</item>
+    </string-array>
 </resources>
