--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,4 +136,39 @@
         <item>Noviembre</item>
         <item>Diciembre</item>
     </string-array>
+
+    <!-- aqui las traducciones del instrumento final de paciente -->
+    <string name="title_activity_final_instrument_patient">Evaluacion Final</string>
+
+    <string name="final_instrument_patient_intro_1">Este cuestionario se ha diseñado para medir el nivel de percepción sobre el uso y utilidad de la aplicación “monitor de ansiedad”.</string>
+    <string name="final_instrument_patient_intro_2">Favor de contestar las preguntas tomando en cuenta su experiencia durante el uso de la aplicación.</string>
+    <string name="final_instrument_patient_intro_3">Muchas gracias!</string>
+    <string name="final_instrument_patient_intro_4">La primera parte consiste en medir los aspectos de facilidad de uso de la aplicación</string>
+    <string name="final_instrument_patient_intro_5">La segunda parte consiste en medir la utilidad de la información que en ella se muestra para fines de mejorar el tratamiento</string>
+    <string name="final_instrument_patient_intro_6">La tercera parte consiste en medir la percepción de utilidad de los módulos usados durante la terapia.</string>
+
+    <string name="final_instrument_t1">Facilidad de uso</string>
+    <string name="final_instrument_q1_1">El uso de la sección de registro de experiencias diaria (DAS-A) se me hizo:</string>
+    <string name="final_instrument_q1_2">El uso de la sección de registro de categorías detonantes de ansiedad se me hizo en general:</string>
+
+    <string name="final_instrument_t2">Utilidad de la información proporcionada:</string>
+    <string name="final_instrument_q2_1">La gráfica generada por los registros de la evaluación diaria (DAS-A) durante el tratamiento fue:</string>
+    <string name="final_instrument_q2_2">La gráfica generada por los registros de categorías detonantes de ansiedad durante el tratamiento fue:</string>
+
+    <string name="final_instrument_t3">Percepción de utilidad de los módulos utilizados:</string>
+    <string name="final_instrument_q3_1">El módulo de la evaluación diaria durante el tratamiento para mí fue:</string>
+    <string name="final_instrument_q3_2">El módulo de registros de categorías detonantes de ansiedad en general durante el tratamiento para mí fue:</string>
+    <string name="final_instrument_q3_3">La sección de reflexión del módulo de categorías detonantes de ansiedad durante el tratamiento para mí fue:</string>
+
+    <string name="final_instrument_t4">Escriba un texto en donde explicite mejoras a la aplicación que se muestran a continuación.</string>
+    <string name="final_instrument_q4_1">¿Qué modificaciones haría usted a la aplicación Monitor de ansiedad para mejorar su utilidad como apoyo durante la terapia?</string>
+    <string name="final_instrument_q4_2">¿Por qué propone usted estas modificaciones?</string>
+
+    <string name="final_instrument_patient_seek_placeholder_1_1">Nada sencillo</string>
+    <string name="final_instrument_patient_seek_placeholder_1_2">Muy sencillo</string>
+
+    <string name="final_instrument_patient_seek_placeholder_2_1">Nada útil</string>
+    <string name="final_instrument_patient_seek_placeholder_2_2">Muy útil</string>
+    <string name="title_activity_final_instrument_therapist">final_instrument_therapist</string>
+
 </resources>
